src/generators/snapshots/scrut__generators__generator__tests__update__markdown__adjust_to_right_amount_of_backticks.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test

`````scrut
$ the command
````
new output
````
`````

