src/generators/snapshots/scrut__generators__generator__tests__update__markdown__comments_in_code.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test

```scrut
# some comment before
$ the command
new output
```

