src/generators/snapshots/scrut__generators__generator__tests__update__markdown__per_document_config.snap
---
source: src/generators/generator.rs
assertion_line: 52
expression: result
---
---
total_timeout: 2m 3s
defaults:
  timeout: 3m 4s
---

This is a test

```scrut
$ the command
new output
```

