src/generators/snapshots/scrut__generators__generator__tests__update__markdown__per_test_config.snap
---
source: src/generators/generator.rs
assertion_line: 52
expression: result
---
This is a test

```scrut {timeout: 3m 4s, wait: {timeout: 4m 5s, path: some-path}}
$ the command
new output
```

