src/generators/snapshots/scrut__generators__generator__tests__update__markdown__simple_unchanged.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```scrut
$ the command
an expectation
```

