src/generators/snapshots/scrut__generators__generator__tests__update__markdown__updated_output_none_zero_exit_code.snap
---
source: src/generators/generator.rs
assertion_line: 50
expression: result
---
This is a test

```scrut
$ the command
same output
[10]
```

